Fixed ribbon sticking out

--- a/style.css
+++ b/style.css
@@ -1492,6 +1492,7 @@ body.is-preload #banner .inner ul:after {
   right: 0;
   width: 139px;
   height: 139px;
+  overflow: hidden;
 }
 .ribbon {
   position: absolute;
